# onnxruntime-cpp-example

./: Dockerfile  README.md  docker-compose.yml
workspace/: CMakeLists.txt  image_list.txt  main.cpp
